--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "clsx": "^2.1.0",
     "modern": "^1.0.2",
     "modern-normalize": "^2.0.0",
     "normalize": "^0.3.1",
