--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "modern-normalize": "^2.0.0",
     "normalize": "^0.3.1",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "redux": "^5.0.1"
