--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
+    "formik": "^2.4.6",
     "modern": "^1.0.2",
     "modern-normalize": "^2.0.0",
     "normalize": "^0.3.1",
@@ -23,7 +24,8 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
