--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.16",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "clsx": "^2.1.0",
     "formik": "^2.4.6",
     "modern": "^1.0.2",
@@ -24,6 +28,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "yup": "^1.4.0"
   },
